# Jellyfin-Desktop-Player

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: web-parity-audit-2026-06-16.md  web-parity-checklist.md
patches/mpv/: 0001-wayland-embed-subsurface.patch
scripts/: build-mpv.sh  bundle.sh
src/: main.cpp
src/core/: AppConfig.cpp  AppConfig.h  Paths.cpp  Paths.h  ScreenSaverInhibitor.cpp  ScreenSaverInhibitor.h
src/jellyfin/: JellyfinClient.cpp  JellyfinClient.h
src/mpv/: MpvVideoItem.cpp  MpvVideoItem.h
src/qml/: BrowseView.qml  Features.qml  Main.qml  PlayerControls.qml  PlayerView.qml  Theme.qml
src/qml/components/: AppBar.qml  DarkMenu.qml  DarkMenuItem.qml  DirectoryPicker.qml  ItemContextMenu.qml  JIconButton.qml  MediaCard.qml  MediaRow.qml  MediaWideRow.qml  NavDrawer.qml
src/qml/screens/: AdminScreen.qml  DetailScreen.qml  HomeScreen.qml  LibraryScreen.qml  LoginView.qml  PlayerControls.qml  PlayerView.qml  SearchScreen.qml  SettingsScreen.qml
src/qml/theme/: Features.qml  Theme.qml
